# rust_web_form_api

./: .env  Cargo.toml  LICENSE  Readme.md  notes.md
src/: main.rs
