[package]
name = "rust_web_form_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"        # For building the web server
tokio = { version = "1", features = ["full"] }  # Asynchronous runtime
hyper = "0.14"           # For HTTP server functionality
chrono = "0.4"           # For handling timestamps
serde = { version = "1.0", features = ["derive"] }  # For JSON serialization
serde_json = "1.0"       # For JSON serialization